--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - exports:/tmp/steel-browser-exports
       - ./.cache:/app/.cache
     environment:
-      - DOMAIN=${DOMAIN:-localhost:9222}
-      - CDP_DOMAIN=${CDP_DOMAIN:-localhost:9223}
+      - DOMAIN=https://browser.timothykosakoy.com
+      - CDP_DOMAIN=wss://browser.timothykosakoy.com
       - LOG_STORAGE_ENABLED=true
       - LOG_STORAGE_PATH=/data/logs/browser-logs.duckdb
     networks:
@@ -19,7 +19,7 @@ services:
   ui:
     image: ghcr.io/steel-dev/steel-browser-ui:latest
     ports:
-      - "5173"
+      - "80"
     environment:
       - API_URL=${API_URL:-http://api:9222}
     depends_on:
