--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   api:
     image: ghcr.io/steel-dev/steel-browser-api:latest
-    ports:
+    expose:
       - "9222"
       - "9223"
     volumes:
@@ -18,7 +18,7 @@ services:
 
   ui:
     image: ghcr.io/steel-dev/steel-browser-ui:latest
-    ports:
+    expose:
       - "80"
     environment:
       - API_URL=${API_URL:-http://api:9222}
